--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@yadoms/domain/keywords": ["libs/domain/keywords/src/index.ts"],
       "@yadoms/domain/plugins": ["libs/domain/plugins/src/index.ts"],
       "@yadoms/pages/home": ["libs/pages/home/src/index.ts"],
       "@yadoms/pages/plugins": ["libs/pages/plugins/src/index.ts"],
