Feature/migration mantine (#22)
migrate mantine to v7

--- a/apps/yadoms-cs/project.json
+++ b/apps/yadoms-cs/project.json
@@ -3,70 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/yadoms-cs/src",
   "projectType": "application",
-  "targets": {
-    "build": {
-      "executor": "@nx/vite:build",
-      "outputs": ["{options.outputPath}"],
-      "defaultConfiguration": "production",
-      "options": {
-        "outputPath": "dist/apps/yadoms-cs"
-      },
-      "configurations": {
-        "development": {
-          "mode": "development"
-        },
-        "production": {
-          "mode": "production"
-        }
-      }
-    },
-    "serve": {
-      "executor": "@nx/vite:dev-server",
-      "defaultConfiguration": "development",
-      "options": {
-        "buildTarget": "yadoms-cs:build"
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "yadoms-cs:build:development",
-          "hmr": true
-        },
-        "production": {
-          "buildTarget": "yadoms-cs:build:production",
-          "hmr": false
-        }
-      }
-    },
-    "preview": {
-      "executor": "@nx/vite:preview-server",
-      "defaultConfiguration": "development",
-      "options": {
-        "buildTarget": "yadoms-cs:build"
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "yadoms-cs:build:development"
-        },
-        "production": {
-          "buildTarget": "yadoms-cs:build:production"
-        }
-      }
-    },
-    "test": {
-      "executor": "@nx/vite:test",
-      "outputs": ["coverage/apps/yadoms-cs"],
-      "options": {
-        "passWithNoTests": true,
-        "reportsDirectory": "../../coverage/apps/yadoms-cs"
-      }
-    },
-    "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["apps/yadoms-cs/**/*.{ts,tsx,js,jsx}"]
-      }
-    }
-  },
-  "tags": []
+  "tags": [],
+  "// targets": "to see all targets run: nx show project yadoms-cs --web",
+  "targets": {}
 }
