--- a/libs/domain/keywords/project.json
+++ b/libs/domain/keywords/project.json
@@ -30,7 +30,7 @@
     },
     "test": {
       "executor": "@nx/vite:test",
-      "outputs": ["coverage/libs/domain/keywords"],
+      "outputs": ["{workspaceRoot}/coverage/libs/domain/keywords"],
       "options": {
         "passWithNoTests": true,
         "reportsDirectory": "../../../coverage/libs/domain/keywords"
