--- a/libs/pages/home/project.json
+++ b/libs/pages/home/project.json
@@ -30,7 +30,7 @@
     },
     "test": {
       "executor": "@nx/vite:test",
-      "outputs": ["coverage/libs/pages/home"],
+      "outputs": ["{workspaceRoot}/coverage/libs/pages/home"],
       "options": {
         "passWithNoTests": true,
         "reportsDirectory": "../../../coverage/libs/pages/home"
