--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yadoms-cs",
+  "name": "@yadoms-cs/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -19,77 +19,83 @@
   },
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@mantine/core": "^6.0.14",
-    "@mantine/dates": "^6.0.14",
-    "@mantine/form": "^6.0.14",
-    "@mantine/hooks": "^6.0.14",
-    "@mantine/modals": "^6.0.14",
-    "@mantine/notifications": "^6.0.14",
-    "@reduxjs/toolkit": "1.9.5",
-    "@tabler/icons-react": "^2.22.0",
-    "axios": "^1.4.0",
-    "dayjs": "^1.11.8",
-    "i18next": "^23.2.3",
-    "i18next-browser-languagedetector": "^7.0.2",
-    "mantine-react-table": "^1.3.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-i18next": "^13.0.1",
-    "react-query": "^3.39.3",
-    "react-redux": "8.1.1",
-    "react-router-dom": "^6.14.0",
+    "@emotion/react": "^11.11.4",
+    "@mantine/core": "^7.10.1",
+    "@mantine/dates": "^7.10.1",
+    "@mantine/form": "^7.10.1",
+    "@mantine/hooks": "^7.10.1",
+    "@mantine/modals": "^7.10.1",
+    "@mantine/notifications": "^7.10.1",
+    "@reduxjs/toolkit": "2.2.5",
+    "@tabler/icons-react": "^3.5.0",
+    "@tanstack/react-query": "^5.39.0",
+    "@tanstack/react-query-devtools": "^5.39.0",
+    "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "mantine-react-table": "^2.0.0-beta.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-i18next": "^14.1.2",
+    "react-redux": "9.1.2",
+    "react-router-dom": "^6.23.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "@mantine/ds": "^6.0.14",
-    "@nx/cypress": "16.4.0",
-    "@nx/eslint-plugin": "16.4.0",
-    "@nx/js": "16.4.0",
-    "@nx/linter": "16.4.0",
-    "@nx/react": "16.4.0",
-    "@nx/storybook": "16.4.0",
-    "@nx/vite": "16.4.0",
-    "@nx/web": "16.4.0",
-    "@nx/workspace": "16.4.0",
-    "@storybook/addon-docs": "7.0.23",
-    "@storybook/addon-essentials": "7.0.23",
-    "@storybook/core-common": "^7.0.23",
-    "@storybook/core-server": "7.0.23",
-    "@storybook/react-vite": "^7.0.23",
-    "@testing-library/react": "14.0.0",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
+    "@nx/cypress": "~19.1.0",
+    "@nx/eslint": "19.1.0",
+    "@nx/eslint-plugin": "19.1.0",
+    "@nx/js": "19.1.0",
+    "@nx/linter": "~19.1.0",
+    "@nx/react": "19.1.0",
+    "@nx/storybook": "~19.1.0",
+    "@nx/vite": "19.1.0",
+    "@nx/web": "19.1.0",
+    "@nx/workspace": "19.1.0",
+    "@storybook/addon-docs": "8.1.3",
+    "@storybook/addon-essentials": "8.1.3",
+    "@storybook/core-common": "^8.1.3",
+    "@storybook/core-server": "8.1.3",
+    "@storybook/react-vite": "^8.1.3",
+    "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@tanstack/eslint-plugin-query": "^5.35.6",
+    "@testing-library/react": "15.0.6",
+    "@types/node": "18.16.9",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "5.60.0",
-    "@typescript-eslint/parser": "5.60.0",
-    "@vitejs/plugin-react": "^4.0.1",
-    "@vitest/coverage-c8": "0.32.2",
-    "@vitest/ui": "0.32.2",
-    "cypress": "12.15.0",
-    "eslint": "~8.43.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-cypress": "^2.13.3",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.3.1",
+    "cypress": "13.10.0",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "husky": "^8.0.3",
+    "lint-staged": "^15.2.5",
+    "husky": "^9.0.11",
     "jsdom": "~22.1.0",
-    "lint-staged": "^13.2.2",
-    "nx": "16.4.0",
-    "nx-cloud": "16.0.5",
-    "prettier": "^2.8.8",
-    "react-test-renderer": "18.2.0",
-    "ts-node": "10.9.1",
-    "typescript": "~5.1.3",
-    "vite": "4.3.9",
-    "vite-plugin-dts": "~2.3.0",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.32.2"
+    "nx": "19.1.0",
+    "nx-cloud": "~19.0.0",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "^2.6.2",
+    "typescript": "~5.4.2",
+    "vite": "~5.0.0",
+    "vitest": "^1.3.1"
+  },
+  "nx": {
+    "includedScripts": []
   },
   "husky": {
     "hooks": {
