--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^14.1.2",
+    "react-icons": "^5.3.0",
     "react-redux": "9.1.2",
     "react-router-dom": "^6.23.1",
     "uuid": "^9.0.1"
@@ -81,9 +82,9 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "lint-staged": "^15.2.5",
     "husky": "^9.0.11",
     "jsdom": "~22.1.0",
+    "lint-staged": "^15.2.5",
     "nx": "19.1.0",
     "nx-cloud": "~19.0.0",
     "postcss": "^8.4.38",
