--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^14.1.2",
-    "react-icons": "^5.3.0",
     "react-redux": "9.1.2",
     "react-router-dom": "^6.23.1",
+    "semver": "^7.6.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
